Fixed the bug where the card images were not showing when cards were flipped. Removed the display: hidden attribute for the .front class in the CSS file. Resized card images to fit the entire box. Also changed the src tag for the generateCards function in the JS file. Need to fix the score system next.

--- a/styles.css
+++ b/styles.css
@@ -55,8 +55,8 @@ p {
 }
 
 .front-image {
-    width: 60px;
-    height: 60px;
+    width: 100%;
+    height: 100%;
 }
 
 .card.flipped {
@@ -65,7 +65,6 @@ p {
 
 .front,
 .back {
-    backface-visibility: hidden;
     position: absolute;
     border-radius: 10px;
     top: 0;
@@ -86,5 +85,4 @@ p {
     background-position: center center;
     background-size: cover;
     backface-visibility: hidden;
-
 }
